public/stylesheets/style.less
@bg-color: #F2F2F2;
@letter-color: #FEFEFE;
@misc-text: #000;
@btn-color: #E5E5E5;

@font-face{
    font-family: "TravelingTypewriter";
    src: url('TravelingTypewriter.ttf'),
    url('TravelingTypewriter.eot'); /* IE */
}

:focus {
    outline: 0;
}

a img {
    border: 0;
}

body {
  font: 14px "TravelingTypewriter", Helvetica, Arial, sans-serif;
  color: @misc-text;
  margin-left: 0;
  background: @bg-color;
}

a {
  color: #00B7FF;
}

.desktop-spacing {
    padding: 70px;
}
.mobile-spacing {
    padding: 0px;
}

#tag-height {
    height: 20px;
}

#tag-list {
    padding-top: 2px;
    height: 30px;
}

.box-shadow (@x: 0; @y: 0; @blur: 1px; @color: #000) {
  -moz-box-shadow: @arguments;
  -webkit-box-shadow: @arguments;
  box-shadow: @arguments;
}

.footer {
    margin-top: 20px;
    text-align: center;
    font-size: 8pt;
    font-weight: italic;
}

#welcome {
    font-size: 20pt;
    text-align: center;
}

.text {
    font-size: 14pt;
}

.btn {
    font: 14px "TravelingTypewriter", Helvetica, Arial, sans-serif;
	.rounded-corners(2px);
	.box-shadow(0px; 1px);
    width: 100%;
	color: #000;
	background-color: @btn-color;
	border: 2px solid (@btn-color - #111);
	padding: 5px 0px 6px;
    cursor: pointer;

    &:hover {
        background-color: (@btn-color + #444);
    }

    // active feels weird on mobile devices
    &:active {
        background-color: (@btn-color + #111);
    }
    margin-top: 10px;
}

.align-center {
    text-align: center;
}

a {
    color:inherit;
    text-decoration: none;
}

#title {
    font-size: 50px;
}

#burn {
}

#throw {
}

#hidden-until-bottle {
    display: none;
}

.rounded-corners (@radius: 5px) {
  -webkit-border-radius: @radius;
  -moz-border-radius: @radius;
  -ms-border-radius: @radius;
  -o-border-radius: @radius;
  border-radius: @radius;
}

#letter {
    font: 14px "TravelingTypewriter", Helvetica, Arial, sans-serif;
    resize: none;
    border: none;
    padding-top: 10px;
    background: @letter-color;
    border: 1px solid @btn-color;
    overflow:hidden;
}

.addendum {
    color: #707070;
}
.original {
    color: #A0A0A0;
}
// NOTE THE ID
#letter-desktop {
    #letter();
    font-size: 16px;
    padding-top: 25px;
    padding-left: 50px;
    padding-right: 50px;
    padding-bottom: 25px;
}

.letter-desktop {
    .letter();
    font-size: 16px;
    padding-left: 50px;
    padding-right: 50px;
    padding-bottom: 25px;
}

.letter {
    font: 14px "TravelingTypewriter", Helvetica, Arial, sans-serif;
    background: @letter-color;
    border: 1px solid @btn-color;
    border-bottom: none;
    border-top-style: none;
    // color: @bg-color;
    text-align: justify;
    padding-top: 25px;
}

.letter-top {
    .letter();
    border-top-style: solid;
}

.letter-desktop-top {
    .letter-desktop();
    border-top-style: solid;
}

.typeahead,
.tt-query,
.tt-hint {
  width: 100%;
  height: 30px;
  padding: 8px 12px;
  font-size: 24px;
  line-height: 30px;
  border: 2px solid #ccc;
  -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
          border-radius: 8px;
  outline: none;
}

.typeahead {
  background-color: #fff;
}

.typeahead:focus {
  border: 2px solid #0097cf;
}

.tt-query {
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.tt-hint {
  color: #999
}

.tt-dropdown-menu {
  width: 100%;
  margin-top: 12px;
  padding: 8px 0;
  padding-right: 0px 0px;
  background-color: #fff;
  border: 1px solid #ccc;
  border: 1px solid rgba(0, 0, 0, 0.2);
  -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
          border-radius: 8px;
  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
          box-shadow: 0 5px 10px rgba(0,0,0,.2);
}

.tt-suggestion {
  padding: 3px 20px;
  padding-right: 0px 0px;
  font-size: 18px;
  line-height: 24px;
}

.tt-suggestion.tt-cursor {
  color: #fff;
  background-color: #0097cf;

}

.tt-suggestion p {
  margin: 0;
}

